# mds-is-client-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  dev_requirements.txt  example_usage.py  get_offline_code.py  mypy.ini  offline_access.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mdsisclienttools/: __init__.py  example_usage.py  get_offline_code.py  mdsisclienttools.py  offline_access.py
src/mdsisclienttools/auth/: TokenManager.py
src/mdsisclienttools/datastore/: ReadWriteHelper.py
tests/: test_mdsisclienttools.py
