[tool.poetry]
name = "mdsisclienttools"
version = "1.2.0"
description = "Python package containing client tools to assist in accessing and using the RRAP M&DS IS APIs and services."
authors = ["RRAP <rrapisdev@gmail.com>"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
pydantic = "^1.9.1"
types-requests = "^2.28.3"
python-jose = "^3.3.0"
cloudpathlib = {extras = ["s3"], version = "^0.9.0"}

[tool.poetry.dev-dependencies]

autopep8 = "^1.6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
myst-nb = "^0.16.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
python-semantic-release = "^7.29.7"
mypy = "^0.971"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"